-Added method to hide/show full-screen icon -Fixed Seekbar thumb cut issue

--- a/src/main/res/layout/tvpage_player.xml
+++ b/src/main/res/layout/tvpage_player.xml
@@ -145,7 +145,7 @@
                     android:weightSum="6">
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.8"
                         android:gravity="center">
@@ -166,7 +166,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.6">
 
@@ -188,7 +188,7 @@
                         android:orientation="horizontal">
 -->
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="2.2">
 
@@ -209,7 +209,7 @@
 
                     <RelativeLayout
                         android:id="@+id/rlTime"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.8"
                         android:gravity="center_vertical|center">
@@ -236,7 +236,7 @@
                     </RelativeLayout>
 
                     <RelativeLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.8"
                         android:gravity="center">
@@ -280,7 +280,7 @@
 
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.8"
                         android:gravity="center">
