--- a/src/main/res/layout-land/activity_full_screen.xml
+++ b/src/main/res/layout-land/activity_full_screen.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relFulllscreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
 
     <FrameLayout
         android:id="@+id/framesparent"
@@ -14,13 +11,10 @@
         android:layout_height="match_parent"
         android:background="#000">
 
-        <com.tvpage.lib.view.TvPagePlayer
-            xmlns:VideoView="http://schemas.android.com/apk/res-auto"
+        <com.tvpage.lib.view.TvPagePlayer xmlns:VideoView="http://schemas.android.com/apk/res-auto"
             android:id="@+id/tvPagePlayer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             VideoView:useDefaultControls="false" />
     </FrameLayout>
-
-
 </RelativeLayout>
